# vartriage

./: .gitignore  .sourcery.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/codeql/: codeql-config.yaml
.github/workflows/: ci.yml  codeql.yml  publish.yml  validation.yaml
docs/: api-mode.md  architecture.md  bundles.md  changelog.md  cohort-analysis.md  configuration.md  examples.md  getting-started.md  index.md  pipeline-stages.md  reference-files.md  tutorial.md  validation.md
docs/api/: annotation.md  classification.md  cohort.md  config.md  exceptions.md  filter.md  index.md  models.md  parser.md  pipeline.md  prioritization.md  reporting.md
docs/examples/: README.md  sample_clinical_report.html  sample_clinical_report.html.audit.json  sample_pipeline_output.csv  sample_pipeline_output.json
scripts/: analyze_output.py  download_test_data.sh  prepare_references.sh  run_chr22_annotated.py  validate_giab.sh
tests/: conftest.py  test_annotation_engine_smoke.py  test_consequence_smoke.py  test_frequency_smoke.py  test_pipeline_smoke.py
tests/generators/: __init__.py  variants.py  vcf.py
tests/integration/: test_bundle_e2e.py  test_consequence_concordance.py  test_performance.py  test_pipeline_e2e.py  test_vcf_output.py
tests/invariants/: test_annotation.py  test_cache_properties.py  test_classification.py  test_clinical_filtering.py  test_filtering.py  test_parsing.py  test_prioritization.py  test_serialization.py  test_streaming_properties.py  test_warnings.py
tests/unit/: test_acmg_benign_criteria.py  test_acmg_classify_wiring.py  test_acmg_evidence_tags.py  test_api_annotation_engine.py  test_api_base_client.py  test_api_cache.py  test_api_cadd_spliceai.py  test_api_circuit_breaker.py  test_api_clinvar_client.py  test_api_consequence_map.py  test_api_notation.py  test_api_rate_limiter.py  test_api_vep_client.py  test_batch.py  test_biological_accuracy.py  test_bundle.py  test_cache_and_tabix.py  test_cli_gene_filter.py  test_clinical_filtering.py  test_clinical_report.py  test_combining.py  test_csv_writer.py  test_edge_cases.py  test_frequency_filter.py  test_gene_filter.py  test_pdf_writer.py  test_pipeline_gene_filter.py  test_pypi_readiness.py  test_quality_filter.py  test_report_generator.py  test_scoring.py  test_vcf_parser.py  test_vcf_writer.py  test_vectorized.py  test_warning_accumulator.py
vartriage/: __init__.py  cli.py  exceptions.py  pipeline.py  protocols.py
vartriage/_internal/: __init__.py  batch.py  cache.py  genetic_code.py  interval_tree.py  normalizer.py  vectorized.py  warning_accumulator.py
vartriage/annotation/: __init__.py  clinvar.py  clinvar_polars.py  codon_resolver.py  consequence.py  consequence_pyranges.py  engine.py  frequency.py  frequency_polars.py  frequency_tabix.py  transcript_index.py
vartriage/api/: __init__.py  _base.py  _cache.py  _circuit_breaker.py  _consequence_map.py  _notation.py  _rate_limiter.py  annotation_engine.py  cadd_client.py  clinvar_client.py  config.py  score_provider.py  spliceai_client.py  vep_client.py
vartriage/bundle/: __init__.py  _checksums.py  _disk.py  _progress.py  cli.py  config.py  downloader.py  manifest.py  registry.json  registry.py  storage.py  transformer.py
vartriage/classification/: __init__.py  acmg.py  combining.py
vartriage/cohort/: __init__.py  aggregator.py  pipeline.py  report.py  runner.py  statistics.py
vartriage/data/: acmg_sf_v3.2.txt
vartriage/filter/: __init__.py  gene_filter.py  inheritance_filter.py  quality_filter.py  region_filter.py  sample_extractor.py  secondary_findings.py
vartriage/io/: __init__.py  exceptions.py  vcf_parser.py
vartriage/models/: __init__.py  cohort.py  config.py  variant.py  warnings.py
vartriage/prioritization/: __init__.py  engine.py  frequency_filter.py  score_loader.py  scoring.py
vartriage/reporting/: __init__.py  csv_writer.py  generator.py  json_writer.py  pdf_fallback.py  pdf_writer.py  vcf_writer.py
vartriage/reporting/clinical/: __init__.py  audit.py  generator.py  models.py  narrative.py  template_engine.py  templates.py
